--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<header>
 		<div class="wrap">
-			<a href="" class="logo left"> <img src="img/Gradicyan.png" alt="logo"></a>
+			<a href="index.html" class="logo left"> <img src="img/Gradicyan.png" alt="logo"></a>
 			<ul class="menu left">
 				<li><a href="">HOME</a></li>
 				<li><a href="">ABOUT</a></li>
